# OpenMemory

./: .gitignore  README.md  pyproject.toml
openmemory/: __init__.py  embeddings.py  memory_store.py  models.py  server.py
tests/: test_memory_store.py  test_models.py  test_server.py
