[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openmemory"
version = "0.1.0"
description = "Open-source local MCP Server providing cross-application long-term memory for AI applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Carlos", email = "zhengchenzzcc@gmail.com"},
]
keywords = ["mcp", "memory", "ai", "llm", "agent", "local", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
embeddings = ["numpy"]
openai = ["openai"]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/carlos-life/OpenMemory"
Repository = "https://github.com/carlos-life/OpenMemory"
Issues = "https://github.com/carlos-life/OpenMemory/issues"

[project.scripts]
openmemory-server = "openmemory.server:main"

[tool.setuptools.packages.find]
include = ["openmemory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
